source_sass/_base.scss
@import url('http://fonts.googleapis.com/css?family=Bree+Serif|Merriweather');
@import url('http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');


h1 {
  font-size: 2.2rem;
  color: lighten($orange, 25);
}

.test {
  font-size: 1.2rem;
  color: $blue;
}

#content {
    width:100%;
    height:100vh;
    float:left;
    text-align: center;
}

ul {
  list-style: none;
  margin-left: 25px;
}


@mixin border-radius($radius) {
  -webkit-border-radius: $radius;
  -mox-border-radius: $radius;
  border-radius: $radius;  
}

.box { @include border-radius(10px);}

li {
  display: inline-block;
  margin-right: 10px;
  cursor: pointer;
}

section {
	background: lighten(white, 25);
  overflow:hidden;
	height: 100% 
}
section:nth-child(odd) { background: $blue; height: 100%;}

ul.mountain_list {
    -moz-column-count: 3;
    -moz-column-gap: 20px;
    -webkit-column-count: 3;
    -webkit-column-gap: 20px;
    column-count: 3;
    column-gap: 20px;

}

nav {
  background: black;
  color: white;
  transition: opacity 1s ease;
  opacity: 1;

  height: 80px;
  line-height: 80px;
  width: 100%;

  position: fixed;
  top: 0;
  left: 0;
  z-index:5;
  text-align: center;
}
nav a {
  color: white;
  text-decoration: none;
}

shrink {
  height: 60px;
}

nav li a {
    color:$orange;
    font-weight:700;
}

a.nav-active {
    color:$blue;
}

nav:hover { opacity: 1; }

.wrapper{
  width:100%;
  position:relative;
  //margin:5% auto 0;
}


//variables for the mountain section multi column
.container{
  width:100%;
}

.col{
  float:left; 
  width:33%;
  padding:2px;
}



//carousel css below------------------------

.carousel{
  width: 100%;
  position: relative;
  padding-top: 60%;
  overflow: hidden;
}

.inner{
  width: 100%;
  height: 100%;
  position: absolute;
  top:0;
  left: 0;
}

//slide specific styling
.slide{
  width: 100%;
  height: 100%;
  position: absolute;
  top:0;
  right:0;
  left:0;
  z-index: 1;
  opacity: 0;
}

.slide.active,
.slide.left,
.slide.right{
  z-index: 2;
  opacity: 1;
}

.js-reset-left{left:auto}

.slide.left{
  left:-100%;
  right:0;
}

.slide.right{
  right:-100%;
  left: auto;
}

.transition .slide.left{left:0%}
.transition .slide.right{right:0%}

//slide the slides
.transition .slide.shift-right{right: 100%;left:auto}
.transition .slide.shift-left{left: 100%;right:auto}


.transition .slide{
  transition-property: right, left, margin;
}


//arrow code
.arrow{
  width: 20px;
  height: 20px;
  position:absolute;
  top:20%;
  z-index:4;
  border-top:3px solid #F00;
  border-right:3px solid #F00;
  cursor:pointer;
  transition:border-color 0.3s ease-out;
}

.arrow:hover{border-color:#93278f}

.arrow-left{
  left:20px;
  transform:rotate(225deg);
}

.arrow-right{
  right:20px;
  transform:rotate(45deg);
}

.slide{
  text-align:center;
  padding-top:25%;
  background-size:cover;
}



.slide:nth-child(1){
  background-image:url("../media/ski_site_resources/big_ski_pic.jpeg");
 }

.slide:nth-child(2){
  background-image:url("../media/ski_site_resources/big_ski_pic_two.jpg");
}

.slide:nth-child(3){
  background-image:url("../media/ski_site_resources/big_ski_pic_three.jpg");
 }

//hero banner and background image div code----------------
 .greeting{
  position: absolute;
  top: 0;
  left: 0;
  z-index:0;
  width:100%;
  height:100%;
  //padding-top: %;
  background-image:url("../media/ski_site_resources/okemo_chairlift.jpg");
  background-size: cover;
 }

 .greeting_container {
  position:relative;
  height:100%;
  width:100%;
  overflow:hidden;
 }





//Modal stuff--------------
/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}


//vertically align
.vid_div {
    position:relative;
    height:100%;
    
}
video {
    position:absolute;
    top:0;
    bottom:0;
    margin:auto;
    left:0; 
    right:0;
}
.video {
    min-height:50px
}

//CSS3 animation stuff:
.trickyP {
  animation-duration: 1s;
  animation-name: slidein;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}
@keyframes slidein {
  from {
    margin-left: 100%;
    width: 300%; 
  }

  to {
    margin-left: 0%;
    width: 100%;
  }
}

